<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cnich.mymedicare.DashBoard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Dashboard"
        android:id="@+id/dashboardTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="User Name"
        android:id="@+id/userNameTextView"
        android:layout_alignTop="@+id/dashboardTitleTextView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instructionsAssessStats"
        android:id="@+id/instructionMonitorStatsTextView"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dashboardTitleTextView"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAssessStats"
        android:id="@+id/buttonAssessStats"
        android:onClick="assessStatisticsButtonPressed"
        android:layout_below="@+id/instructionMonitorStatsTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instructionsAccessManageAccount"
        android:id="@+id/instructionManageAccountTextView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonAssessStats"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonManageAccount"
        android:id="@+id/buttonManageAccount"
        android:onClick="manageAccountButtonPressed"
        android:layout_below="@+id/instructionManageAccountTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />




</RelativeLayout>
